# Numerical_Methods

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  a.out  build.sh  main.cpp  main.cu  opencl_matmul.cpp  parallel_fg.cu  run_docker.ps1
includes/: RootFinding.hpp
src/: RootFinding.cpp  RootFinding.cu
src/cpu/: RootFinding.cpp  main.cpp
src/cuda/: RootFinding.cu  main.cu
